--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -174,7 +174,7 @@ h6 {
 .defaultHero,
 .roomsHero {
   min-height: calc(100vh - 66px);
-  background: url('/images/jpeg/defaultBcg2.jpg') center/cover no-repeat;
+  background: url('/images/jpeg/tsc.jpg') center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
